--- a/html/vr.css
+++ b/html/vr.css
@@ -12,81 +12,47 @@ For a copy, see <https://opensource.org/licenses/MIT>.
 	손등 18px -> 나나 24
 */
 
-.noty_body {
-	display: block;
-	overflow: hidden;
-	text-overflow: ellipsis;
-	white-space: nowrap;
-}
+.noty_theme__sunset.noty_bar {
+  margin: 4px 0;
+  overflow: hidden;
+  border-radius: 2px;
+  position: relative; }
+  .noty_theme__sunset.noty_bar .noty_body {
+    padding: 10px;
+    font-size: 14px;
+    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.1); }
+  .noty_theme__sunset.noty_bar .noty_buttons {
+    padding: 10px; }
 
-.noty_layout {
-	max-width: none;
-	width: 80% !important;
-}
+.noty_theme__sunset.noty_type__alert,
+.noty_theme__sunset.noty_type__notification {
+  background-color: #073B4C;
+  color: #fff; }
+  .noty_theme__sunset.noty_type__alert .noty_progressbar,
+  .noty_theme__sunset.noty_type__notification .noty_progressbar {
+    background-color: #fff; }
 
-.noty_theme__relax.noty_bar {
-	margin: 4px 0;
-	overflow: hidden;
-	border-radius: 2px;
-	position: relative;
-}
+.noty_theme__sunset.noty_type__warning {
+  background-color: #FFD166;
+  color: #fff; }
 
-.noty_theme__relax.noty_bar .noty_body {
-	padding: 5px 10px 10px;
-	font-size: 24px;
-	text-align: center;
-}
+.noty_theme__sunset.noty_type__error {
+  background-color: #EF476F;
+  color: #fff; }
+  .noty_theme__sunset.noty_type__error .noty_progressbar {
+    opacity: .4; }
 
-.noty_theme__relax.noty_bar .noty_buttons {
-	border-top: 1px solid #e7e7e7;
-	padding: 5px 10px;
-}
+.noty_theme__sunset.noty_type__info,
+.noty_theme__sunset.noty_type__information {
+  background-color: #118AB2;
+  color: #fff; }
+  .noty_theme__sunset.noty_type__info .noty_progressbar,
+  .noty_theme__sunset.noty_type__information .noty_progressbar {
+    opacity: .6; }
 
-.noty_theme__relax.noty_type__alert, .noty_theme__relax.noty_type__notification {
-	background-color: #fff;
-	border: 1px solid #dedede;
-	color: #444;
-}
-
-.noty_theme__relax.noty_type__warning {
-	background-color: #FFEAA8;
-	border: 1px solid #FFC237;
-	color: #826200;
-}
-
-.noty_theme__relax.noty_type__warning .noty_buttons {
-	border-color: #dfaa30;
-}
-
-.noty_theme__relax.noty_type__error {
-	background-color: #FF8181;
-	border: 1px solid #e25353;
-	color: #FFF;
-}
-
-.noty_theme__relax.noty_type__error .noty_buttons {
-	border-color: darkred;
-}
-
-.noty_theme__relax.noty_type__info, .noty_theme__relax.noty_type__information {
-	background-color: #78C5E7;
-	border: 1px solid #3badd6;
-	color: #FFF;
-}
-
-.noty_theme__relax.noty_type__info .noty_buttons, .noty_theme__relax.noty_type__information .noty_buttons {
-	border-color: #0B90C4;
-}
-
-.noty_theme__relax.noty_type__success {
-	background-color: #BCF5BC;
-	border: 1px solid #7cdd77;
-	color: darkgreen;
-}
-
-.noty_theme__relax.noty_type__success .noty_buttons {
-	border-color: #50C24E;
-}
+.noty_theme__sunset.noty_type__success {
+  background-color: #06D6A0;
+  color: #fff; }
 
 ::-webkit-scrollbar {
 	width: 8px;
