--- a/html/src/vr.pug
+++ b/html/src/vr.pug
@@ -20,32 +20,32 @@ html
                             .detail
                                 span.extra
                                     span.time {{ feed.created_at | formatDate('HH:MI') }}
-                                    | #[span.name(v-text="feed.displayName")] is in #[location(:location="feed.location[0]")]
+                                    | #[span.name(v-text="feed.displayName")] #[location(:location="feed.location[0]")]
                         div(v-else-if="feed.type === 'Offline'" class="x-friend-item" :class="{ friend: feed.isFriend, favorite: feed.isFavorite }")
                             .detail
                                 span.extra
                                     span.time {{ feed.created_at | formatDate('HH:MI') }}
-                                    | #[span.name(v-text="feed.displayName")] has logged out
+                                    | #[span.name(v-text="feed.displayName")] ❌
                         div(v-else-if="feed.type === 'Online'" class="x-friend-item" :class="{ friend: feed.isFriend, favorite: feed.isFavorite }")
                             .detail
                                 span.extra
                                     span.time {{ feed.created_at | formatDate('HH:MI') }}
-                                    | #[span.name(v-text="feed.displayName")] has logged in
+                                    | #[span.name(v-text="feed.displayName")] ✔️
                         div(v-else-if="feed.type === 'Status'" class="x-friend-item" :class="{ friend: feed.isFriend, favorite: feed.isFavorite }")
                             .detail
                                 span.extra
                                     span.time {{ feed.created_at | formatDate('HH:MI') }}
-                                    | #[span.name(v-text="feed.displayName")] is #[i.x-user-status(:class="userStatusClass(feed.status[0])")] {{feed.status[0].statusDescription}}
+                                    | #[span.name(v-text="feed.displayName")] #[i.x-user-status(:class="userStatusClass(feed.status[0])")] {{feed.status[0].statusDescription}}
                         div(v-else-if="feed.type === 'OnPlayerJoined'" class="x-friend-item" :class="{ friend: feed.isFriend, favorite: feed.isFavorite }")
                             .detail
                                 span.extra
                                     span.time {{ feed.created_at | formatDate('HH:MI') }}
-                                    | #[span.name(v-text="feed.data")] has joined
+                                    | ▶️ #[span.name(v-text="feed.data")]
                         div(v-else-if="feed.type === 'OnPlayerLeft'" class="x-friend-item" :class="{ friend: feed.isFriend, favorite: feed.isFavorite }")
                             .detail
                                 span.extra
                                     span.time {{ feed.created_at | formatDate('HH:MI') }}
-                                    | #[span.name(v-text="feed.data")] has left
+                                    | ◀️ #[span.name(v-text="feed.data")]
                         div(v-else-if="feed.type === 'Location'" class="x-friend-item" :class="{ friend: feed.isFriend, favorite: feed.isFavorite }")
                             .detail
                                 span.extra
