fix: buggy carousel transition animation

--- a/html/src/index.pug
+++ b/html/src/index.pug
@@ -3808,7 +3808,7 @@ html
                     br
                     span.x-link(v-if="screenshotMetadataDialog.metadata.author" v-text="screenshotMetadataDialog.metadata.author.displayName" @click="showUserDialog(screenshotMetadataDialog.metadata.author.id)" style="color:#909399;font-family:monospace")
                     br
-                    el-carousel(ref="screenshotMetadataCarousel" :interval="0" initial-index="1" indicator-position="none" height="600px" style="margin-top:10px" @change="screenshotMetadataCarouselChange")
+                    el-carousel(ref="screenshotMetadataCarousel" :interval="0" initial-index="1" indicator-position="none" arrow="always" height="600px" style="margin-top:10px" @change="screenshotMetadataCarouselChange")
                         el-carousel-item
                             el-popover(placement="top" width="700px" trigger="click")
                                 img.x-link(slot="reference" v-lazy="screenshotMetadataDialog.metadata.previousFilePath" style="width:100%;height:100%;object-fit:contain")
@@ -3823,7 +3823,7 @@ html
                                 img(v-lazy="screenshotMetadataDialog.metadata.nextFilePath" style="height:700px")
                     br
                     template(v-if="screenshotMetadataDialog.metadata.error")
-                        span(v-text="screenshotMetadataDialog.metadata.error")
+                        pre(v-text="screenshotMetadataDialog.metadata.error")
                         br
                     span(v-for="user in screenshotMetadataDialog.metadata.players" style="margin-top:5px")
                         span.x-link(v-text="user.displayName" @click="lookupUser(user)")
