--- a/html/src/index.pug
+++ b/html/src/index.pug
@@ -1124,7 +1124,7 @@ html
                                         span.name {{ $t("view.settings.general.general.latest_app_version") }}
                                         span.extra(v-if="latestAppVersion" v-text="latestAppVersion")
                                         span.extra(v-else) {{ $t("view.settings.general.general.latest_app_version_refresh") }}
-                                .x-friend-item(@click="openExternalLink('https://github.com/pvrcx-team/VRCX')")
+                                .x-friend-item(@click="openExternalLink('https://github.com/vrcx-team/VRCX')")
                                     .detail
                                         span.name {{ $t("view.settings.general.general.repository_url") }}
                                         span.extra https://github.com/vrcx-team/VRCX
