--- a/html/src/index.pug
+++ b/html/src/index.pug
@@ -1419,6 +1419,8 @@ html
                                     el-button(size="small" icon="el-icon-s-operation" @click="showLaunchOptions()") {{ $t('view.settings.advanced.advanced.launch_options') }}
                                     el-button(size="small" icon="el-icon-picture" @click="showScreenshotMetadataDialog()") {{ $t('view.settings.advanced.advanced.screenshot_metadata') }}
                                     el-button(size="small" icon="el-icon-folder" @click="openShortcutFolder()") {{ $t('view.settings.advanced.advanced.auto_launch') }}
+                                        el-tooltip(placement="top" style="margin-left:5px" :content="$t('view.settings.advanced.advanced.auto_launch_tooltip')")
+                                            i.el-icon-warning
                             div.options-container
                                 span.sub-header {{ $t('view.settings.advanced.advanced.primary_password.header') }}
                                 div.options-container-item
