--- a/html/src/index.pug
+++ b/html/src/index.pug
@@ -3883,7 +3883,7 @@ html
                                 img(v-lazy="screenshotMetadataDialog.metadata.nextFilePath" style="height:700px")
                     br
                     template(v-if="screenshotMetadataDialog.metadata.error")
-                        pre(v-text="screenshotMetadataDialog.metadata.error")
+                        pre(v-text="screenshotMetadataDialog.metadata.error" style="white-space:pre-wrap;font-size:12px")
                         br
                     span(v-for="user in screenshotMetadataDialog.metadata.players" style="margin-top:5px")
                         span.x-link(v-text="user.displayName" @click="lookupUser(user)")
