--- a/html/src/index.pug
+++ b/html/src/index.pug
@@ -2533,6 +2533,8 @@ html
                     el-button(size="small" icon="el-icon-copy-document" @click="copyImageToClipboard(screenshotMetadataDialog.metadata.filePath)") {{ $t('dialog.screenshot_metadata.copy_image') }}
                     el-button(size="small" icon="el-icon-folder" @click="openImageFolder(screenshotMetadataDialog.metadata.filePath)") {{ $t('dialog.screenshot_metadata.open_folder') }}
                     el-button(v-if="API.currentUser.$isVRCPlus && screenshotMetadataDialog.metadata.filePath" size="small" icon="el-icon-upload2" @click="uploadScreenshotToGallery") {{ $t('dialog.screenshot_metadata.upload') }}
+                    //- Search bar input
+                    el-input(v-model="screenshotMetadataDialog.search" size="small" placeholder="Search" style="width:200px;margin-left:10px" @input="screenshotMetadataSearch")
                     br
                     br
                     span(v-text="screenshotMetadataDialog.metadata.fileName")
