--- a/html/src/index.pug
+++ b/html/src/index.pug
@@ -2578,7 +2578,7 @@ html
                         br
                     span(v-for="user in screenshotMetadataDialog.metadata.players" style="margin-top:5px")
                         span.x-link(v-text="user.displayName" @click="lookupUser(user)")
-                        span(v-if="user.x" v-text="'('+user.x+', '+user.y+', '+user.z+')'" style="margin-left:5px;color:#909399;font-family:monospace")
+                        span(v-if="user.pos" v-text="'('+user.pos.x+', '+user.pos.y+', '+user.pos.z+')'" style="margin-left:5px;color:#909399;font-family:monospace")
                         br
 
             //- dialog: change log
