--- a/html/src/mixins/tabs/playerList.pug
+++ b/html/src/mixins/tabs/playerList.pug
@@ -16,7 +16,7 @@ mixin playerListTab()
                         el-tag(v-else-if="currentInstanceWorld.ref.releaseStatus === 'public'" type="success" effect="plain" size="mini" style="margin-right:5px") {{ $t('dialog.world.tags.public') }}
                         el-tag(v-else-if="currentInstanceWorld.ref.releaseStatus === 'private'" type="danger" effect="plain" size="mini" style="margin-right:5px") {{ $t('dialog.world.tags.private') }}
                         el-tag.x-tag-platform-pc(v-if="currentInstanceWorld.isPC" type="info" effect="plain" size="mini" style="margin-right:5px") PC
-                        el-tag.x-tag-platform-quest(v-if="currentInstanceWorld.isQuest" type="info" effect="plain" size="mini" style="margin-right:5px") Quest
+                        el-tag.x-tag-platform-quest(v-if="currentInstanceWorld.isAndroid" type="info" effect="plain" size="mini" style="margin-right:5px") Android
                         el-tag.x-tag-platform-ios(v-if="currentInstanceWorld.isIOS" type="info" effect="plain" size="mini" style="margin-right:5px") iOS
                         el-tag(v-if="currentInstanceWorld.avatarScalingDisabled" type="warning" effect="plain" size="mini" style="margin-right:5px;margin-top:5px") {{ $t('dialog.world.tags.avatar_scaling_disabled') }}
                         el-tag(type="info" effect="plain" size="mini" v-text="currentInstanceWorld.fileSize" style="margin-right:5px")
@@ -112,7 +112,7 @@ mixin playerListTab()
                                     span(v-else-if="scope.row.type === 'OnPlayerJoined'")
                                         span(v-if="scope.row.platform === 'Desktop'" style="color:#409eff") Desktop&nbsp;
                                         span(v-else-if="scope.row.platform === 'VR'" style="color:#409eff") VR&nbsp;
-                                        span(v-else-if="scope.row.platform === 'Quest'" style="color:#67c23a") Quest&nbsp;
+                                        span(v-else-if="scope.row.platform === 'Android'" style="color:#67c23a") Android&nbsp;
                                         span.x-link(v-text="scope.row.avatar.name" @click="showAvatarDialog(scope.row.avatar.id)")
                                         | &nbsp;
                                         span(v-if="!scope.row.inCache" style="color:#aaa") #[i.el-icon-download]&nbsp;
@@ -183,7 +183,7 @@ mixin playerListTab()
                                     span(v-else-if="scope.row.type === 'OnPlayerJoined'")
                                         span(v-if="scope.row.platform === 'Desktop'" style="color:#409eff") Desktop&nbsp;
                                         span(v-else-if="scope.row.platform === 'VR'" style="color:#409eff") VR&nbsp;
-                                        span(v-else-if="scope.row.platform === 'Quest'" style="color:#67c23a") Quest&nbsp;
+                                        span(v-else-if="scope.row.platform === 'Android'" style="color:#67c23a") Android&nbsp;
                                         span.x-link(v-text="scope.row.avatar.name" @click="showAvatarDialog(scope.row.avatar.id)")
                                         | &nbsp;
                                         span(v-if="!scope.row.inCache" style="color:#aaa") #[i.el-icon-download]&nbsp;
