--- a/html/src/vr.pug
+++ b/html/src/vr.pug
@@ -527,7 +527,7 @@ html
                                 span(style="margin-left:10px;color:#a3a3a3") has joined
                                 span(v-if="feed.platform === 'Desktop'" style="color:#409eff;margin-left:10px") Desktop
                                 span(v-else-if="feed.platform === 'VR'" style="color:#409eff;margin-left:10px") VR
-                                span(v-else-if="feed.platform === 'Quest'" style="color:#67c23a;margin-left:10px") Quest
+                                span(v-else-if="feed.platform === 'Android'" style="color:#67c23a;margin-left:10px") Android
                                 span(v-else-if="feed.platform === 'iOS'" style="color:#c7c7ce;margin-left:10px") iOS
                                 span(v-if="!feed.inCache" style="color:#aaa;margin-left:10px") #[i.el-icon-download]
                                 span(v-text="feed.avatar.name" style="margin-left:10px")
