--- a/html/src/mixins/tabs/profile.pug
+++ b/html/src/mixins/tabs/profile.pug
@@ -116,10 +116,10 @@ mixin profileTab()
         div.options-container
             span.header {{ $t('view.profile.past_display_names') }}
             data-tables(v-bind="pastDisplayNameTable" style="margin-top:10px")
-                el-table-column(label="Date" prop="updated_at" sortable="custom")
+                el-table-column(:label="$t('table.profile.previous_display_name.date')" prop="updated_at" sortable="custom")
                     template(v-once #default="scope")
                         span {{ scope.row.updated_at | formatDate('long') }}
-                el-table-column(label="Name" prop="displayName")
+                el-table-column(:label="$t('table.profile.previous_display_name.name')" prop="displayName")
         div.options-container
             span.header {{ $t('view.profile.config_json') }}
             el-tooltip(placement="top" :content="$t('view.profile.refresh_tooltip')" :disabled="hideTooltips")
