--- a/html/src/mixins/tabs/gameLog.pug
+++ b/html/src/mixins/tabs/gameLog.pug
@@ -50,3 +50,4 @@ mixin gameLogTab()
             el-table-column(:label="$t('table.gameLog.action')" width="80" align="right")
                 template(v-once #default="scope")
                     el-button(v-if="scope.row.type !== 'OnPlayerJoined' && scope.row.type !== 'OnPlayerLeft' && scope.row.type !== 'Location' && scope.row.type !== 'PortalSpawn'" type="text" icon="el-icon-close" size="mini" @click="deleteGameLogEntry(scope.row)")
+                    el-button(v-if="scope.row.type === 'Location'" type="text" icon="el-icon-tickets" size="mini" @click="showPreviousInstanceInfoDialog(scope.row.location)"
